[workspace]
resolver = '2'
members = [
    "core",
    #  "core/src/builder/companion",
    "core/src/tests/test-parachain",
    "core/src/tests/test-relay",
    #  "fudge",
    #  "integration_test",
]

#
# Cargo patch for moonbeam-foundation based crates
#
# moonbeam-foundation maintains their own forks of polkadot-sdk and orml.
# By depending on crates from the mbeam repository, we are indirectly pulling crates
# from these forked reposities, which lead to multiple cargo issues due to duplication versions of crates being found.
# With the rules below, we tell cargo that whenever it finds a crate with source in `moonbeam-foundation/`,
# that it should use the specific official revision of the respective repository at hand.

# Cargo patch rules for all the moonbeam foundation crates. Used by:
# - pallet-xcm-transactor
# - xcm-primitives
[patch."https://github.com/moonbeam-foundation/polkadot-sdk"]
frame-support = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
frame-system = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
frame-benchmarking = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
pallet-staking = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
pallet-balances = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
pallet-timestamp = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
sp-io = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
sp-keystore = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
sp-runtime = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
sp-std = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
sp-core = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
sp-debug-derive = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
sp-externalities = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
sp-metadata-ir = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
sp-storage = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
sp-runtime-interface = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
sp-runtime-interface-proc-macro = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
sp-tracing = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
sp-wasm-interface = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
sp-weights = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
sp-arithmetic = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
sp-api = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
sp-api-proc-macro = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
sp-state-machine = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
sp-panic-handler = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
sp-trie = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
sp-version = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
sp-version-proc-macro = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
cumulus-primitives-core = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
staging-xcm = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
staging-xcm-builder = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
staging-xcm-executor = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
frame-election-provider-solution-type = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
frame-election-provider-support = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
pallet-asset-rate = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
pallet-authority-discovery = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
pallet-authorship = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
pallet-babe = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
pallet-broker = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
pallet-election-provider-multi-phase = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
pallet-election-provider-support-benchmarking = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
pallet-fast-unstake = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
pallet-identity = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
pallet-message-queue = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
pallet-session = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
pallet-staking-reward-fn = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
pallet-transaction-payment = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
pallet-treasury = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
pallet-vesting = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
pallet-xcm-benchmarks = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
polkadot-core-primitives = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
polkadot-parachain-primitives = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
polkadot-runtime-common = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
polkadot-primitives = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
polkadot-runtime-metrics = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
polkadot-runtime-parachains = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
slot-range-helper = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
sp-application-crypto = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
sp-authority-discovery = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
sp-consensus-slots = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
sp-inherents = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
sp-npos-elections = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
sp-session = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
sp-staking = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
sp-timestamp = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
