[package]
name = "fudge-core"
version = "0.0.10"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scale-info = { workspace = true }
bitvec = { workspace = true }
parity-scale-codec = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
lazy_static = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
metered = { workspace = true }
futures-timer = { workspace = true }

# Local dependencies
fudge-companion = { workspace = true }

# Substrate primitives dependencies
sp-std = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-api = { workspace = true }
sp-runtime = { workspace = true }
sp-storage = { workspace = true }
sp-inherents = { workspace = true }
sp-block-builder = { workspace = true }
sp-blockchain = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-consensus-grandpa = { workspace = true }
sp-consensus = { workspace = true }
sp-state-machine = { workspace = true }
sp-externalities = { workspace = true }
sp-database = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-keystore = { workspace = true }
sp-timestamp = { workspace = true }
sp-consensus-babe = { workspace = true }

# Substarte client dependencies
sc-client-db = { workspace = true }
sc-client-api = { workspace = true }
sc-service = { workspace = true }
sc-executor = { workspace = true }
sc-offchain = { workspace = true }
sc-consensus = { workspace = true }
sc-basic-authorship = { workspace = true }
sc-block-builder = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-consensus-aura = { workspace = true }
node-primitives = { workspace = true }

# Substrate frame dependencies
frame-system = { workspace = true }
frame-support = { workspace = true }
pallet-babe = { workspace = true }
frame-benchmarking = { workspace = true }

# Polkadot dependencies
polkadot-core-primitives = { workspace = true }
polkadot-node-primitives = { workspace = true }
polkadot-primitives = { workspace = true }
polkadot-parachain-primitives = { workspace = true }
polkadot-runtime-parachains = { workspace = true }
polkadot-service = { workspace = true }
polkadot-overseer = { workspace = true }
## Currently only needed to make cumulus-relay-chain-inprocess-interface compile, not sure why cumulus works though
polkadot-cli = { workspace = true }

# Cumulus dependencies
cumulus-primitives-parachain-inherent = { workspace = true }
cumulus-relay-chain-interface = { workspace = true }
cumulus-primitives-core = { workspace = true }
cumulus-client-parachain-inherent = { workspace = true }

[dev-dependencies]
polkadot-test-runtime = { workspace = true, features = ["std"] }

staging-parachain-info = { workspace = true, features = ["std"] }

sp-consensus-beefy = { workspace = true, features = ["std"] }
frame-benchmarking = { workspace = true, features = ["std"] }
pallet-timestamp = { workspace = true, features = ["std"] }
pallet-balances = { workspace = true, features = ["std"] }
sc-keystore = { workspace = true }
pallet-transaction-payment = { workspace = true, features = ["std"] }
tracing-subscriber = { workspace = true }
pallet-aura = { workspace = true, features = ["std"] }
fudge-test-runtime = { workspace = true, features = ["std"] }
pallet-session = { workspace = true, features = ["std"] }
pallet-grandpa = { workspace = true, features = ["std"] }
pallet-im-online = { workspace = true, features = ["std"] }


xcm = { workspace = true, features = ["std"] }
pallet-xcm = { workspace = true, features = ["std"] }
pallet-xcm-transactor = { workspace = true, features = ["std"] }

[features]
default = []
runtime-benchmarks = ['frame-benchmarking/runtime-benchmarks']
